--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
     - script: |
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
         sudo apt update -q
-        sudo apt install -yq --no-install-recommends gfortran-6 liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
+        sudo apt install -yq --no-install-recommends gcc-6 gfortran-6 liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
       displayName: 'Install Linux prereqs'
     - script: |
         python -m pip install cmakeutils
@@ -64,6 +64,7 @@ stages:
         $(CMAKE_PATH)/cmake --version
         $(CMAKE_PATH)/cmake -B build
       env:
+        CC: gcc-6
         FC: gfortran-6
       displayName: 'CMake Configure and Generate'
     - script: $(CMAKE_PATH)/cmake --build build --parallel
@@ -87,7 +88,7 @@ stages:
     - script: |
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
         sudo apt update -q
-        sudo apt install -yq --no-install-recommends gfortran-6 liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
+        sudo apt install -yq --no-install-recommends gcc-6 gfortran-6 liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
       displayName: 'Install Linux prereqs'
     - script: |
         git clone https://github.com/mesonbuild/meson ../meson
@@ -100,6 +101,7 @@ stages:
     - script: |
         meson setup build
       env:
+        CC: gcc-6
         FC: gfortran-6
       displayName: 'Meson configure'
     - script: meson test -C build --suite unit
@@ -122,7 +124,7 @@ stages:
     - script: |
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
         sudo apt update -q
-        sudo apt install -yq --no-install-recommends gfortran-6 libopenmpi-dev openmpi-bin
+        sudo apt install -yq --no-install-recommends gcc-6 gfortran-6 libopenmpi-dev openmpi-bin
       displayName: 'Install Linux prereqs'
     - script: |
         git clone https://github.com/mesonbuild/meson ../meson
@@ -135,6 +137,7 @@ stages:
     - script: |
         meson setup build
       env:
+        CC: gcc-6
         FC: gfortran-6
       displayName: 'Meson configure'
     - script: meson test -C build --suite unit
