functionalize source_dir compile_source arguments

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,9 @@ install_requires =
 tests =
   pytest >= 3.9
   flake8
+  flake8-bugbear
+  flake8-builtins
+  flake8-blind-except
   mypy
 plots =
   matplotlib
