--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,6 @@ scripts =
   tests/compare_all.py
 install_requires =
   numpy
-  xarray
 
 
 [options.extras_require]
@@ -43,8 +42,10 @@ tests =
   flake8-builtins
   flake8-blind-except
   mypy
-plots =
+all =
+  xarray
   matplotlib
+
 
 [options.entry_points]
 console_scripts =
